--- a/Tabang-Hub/Tabang-Hub/Views/Volunteer/PaymentFailed.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Volunteer/PaymentFailed.cshtml
@@ -4,7 +4,11 @@
     ViewBag.Title = "Payment Failed";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<style>
+    body{
+        padding-top: 100px;
+    }
+</style>
 <div class="container mt-5">
     <div class="card mx-auto shadow-lg" style="max-width: 600px;">
         <div class="card-body text-center p-5">
