--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
@@ -127,6 +127,10 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
                 <img src="~/Content/images2/tabanghub3-No-Background.png" class="logo-i img-fluid" alt="Tabang Hub Volunteering Community">
+                <span>
+                    Tabang Hub
+                    <small>Volunteering Community</small>
+                </span>
             </a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 @if (User.Identity.IsAuthenticated)
@@ -279,18 +283,23 @@
                     </div>
                     <hr>
                 }
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="~/Volunteer/DonationHistory"><i class="bi bi-wallet2 me-2"></i>Donation History</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="~/Volunteer/Participate"><i class="bi bi-kanban me-2"></i>Manage Events</a>
-                    </li>
-                    <hr>
-                    <li class="nav-item">
-                        <a class="nav-link" href="~/Page/Logout"><i class="bi bi-box-arrow-left me-2"></i>Logout</a>
-                    </li>
-                </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="@Url.Action("Message", "Message")">
+                        <i class="bi bi-chat-right-heart-fill me-2"></i>Messages
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="~/Volunteer/DonationHistory"><i class="bi bi-wallet2 me-2"></i>Donation History</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="~/Volunteer/Participate"><i class="bi bi-kanban me-2"></i>Manage Events</a>
+                </li>
+                <hr>
+                <li class="nav-item">
+                    <a class="nav-link" href="~/Page/Logout"><i class="bi bi-box-arrow-left me-2"></i>Logout</a>
+                </li>
+            </ul>
             </div>
         </div>
     }
